# nonos

./: .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  README.md  conftest.py  pyproject.toml
.github/workflows/: bleeding-edge.yml  build-and-publish.yml  cd.yml  ci.yml
cli/: README.md  pyproject.toml
cli/src/nonos_cli/: __init__.py  logging.py  parsing.py
cli/tests/: test_cli.py  test_params_usage.py  test_parsing.py  test_readme.py
docs/: api.md  cli.md  index.md
nonos/: main.py
scripts/: pre_publish_checks.py
src/nonos/: __main__.py  _approx.py  _backports.py  _geometry.py  _integrity_checks.py  _types.py  geometry.py  loaders.py  main.py  styling.py
src/nonos/_readers/: binary.py  ini.py  planet.py
src/nonos/api/: __init__.py  _angle_parsing.py  analysis.py  from_simulation.py  satellite.py  tools.py
tests/: test_api.py  test_geometry.py  test_image_comp.py  test_integrity_checks.py  test_load_data.py  test_parse_planet_inputs.py  test_plotting.py
tests/data/pluto_spherical/: pluto.ini
tests/test_interfaces/: test_binary_readers.py  test_contracts.py  test_ini_readers.py  test_loader.py  test_recipes.py
